<?xml version="1.0"?>
<package format="3">
  <name>my_topic_demo_cpp</name>
  <version>0.0.0</version>
  <description>Simple C++ publisher and subscriber demo for ROS 2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 必需的构建依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行和构建时都需要的依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- 测试依赖（可选） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
