<?xml version="1.0"?>
<package format="3">
  <name>my_topic_demo_py</name>
  <version>0.0.0</version>
  <description>Python topic publisher and subscriber</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>ament_cmake</build_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
